# FrameWiz

./: LICENSE  README.md  pyproject.toml
src/framewiz/classes/: enums.py  field.py
