[project]
name = "FrameWiz"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Jancel", email = "ja.alvarezgom@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[dependency-groups]
test = [
    "pytest>=8.3.2",
]
lint = [
    "ruff>=0.5.5",
]

[project.urls]
Homepage = "https://github.com/jalvarezgom/FrameWiz"
Issues = "https://github.com/jalvarezgom/FrameWiz/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
gen_req = "pdm export -o requirements.txt --without-hashes"
lint.composite = ["ruff check --fix", "ruff format"]
test = "pytest"
